--- a/yanputhesis-sample.tex
+++ b/yanputhesis-sample.tex
@@ -363,7 +363,9 @@ int main()
 \bibliographystyle{nputhesis-noslash}                       % 参考文献改进格式
 \bibliography{reference}                                    % 参考文献
 \appendix
-\chapter{一份说明}
+\chapter{一份说明 顺便测试英文标题 Title}
+
+强烈不推荐英文标题！仅供测试，擅自使用后果自负。
 
 \section{测试附录子标题}
 
